--- a/src/main/resources/fr/insa/horodateurjava/views/admin/add-place-view.fxml
+++ b/src/main/resources/fr/insa/horodateurjava/views/admin/add-place-view.fxml
@@ -46,14 +46,14 @@
                     </font>
                 </Text>
 
-                <Text fill="#054a91" layoutX="317.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0" text="En traveaux :" textAlignment="RIGHT" wrappingWidth="138.1826171875">
+                <Text fill="#054a91" layoutX="310.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0" text="En travaux :" textAlignment="RIGHT" wrappingWidth="138.1826171875">
                     <font>
                         <Font size="14" />
                     </font>
                 </Text>
                 <HBox layoutX="528" layoutY="202" spacing="10" />
 
-                <Button layoutX="721.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleAddPlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Ajouter" textFill="WHITE">
+                <Button layoutX="594.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleAddPlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Ajouter" textFill="WHITE">
                     <font>
                         <Font size="14" />
                     </font>
@@ -65,7 +65,7 @@
                   <Font size="14" />
                </font>
             </Text>
-            <Text fill="#054a91" layoutX="363.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0" text="Tarif Horraire :">
+            <Text fill="#054a91" layoutX="369.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0" text="Tarif Horaire :">
                <font>
                   <Font size="14" />
                </font>
@@ -97,12 +97,12 @@
             <ComboBox fx:id="enTravauxComboBox" layoutX="466.0" layoutY="283.0" prefWidth="150.0" style="-fx-background-color: #81A4CD; -fx-text-fill: WHITE; -fx-font-size: 14px;" />
             <ComboBox fx:id="typeComboBox" layoutX="467.0" layoutY="168.0" prefWidth="150.0" style="-fx-background-color: #81A4CD; -fx-text-fill: WHITE; -fx-font-size: 14px;" />
             <ComboBox fx:id="parkingComboBox" layoutX="467.0" layoutY="56.0" prefWidth="150.0" style="-fx-background-color: #81A4CD; -fx-text-fill: WHITE; -fx-font-size: 14px;" />
-            <Button layoutX="616.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleUpdatePlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Modifier" textFill="WHITE">
+            <Button layoutX="450.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleUpdatePlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Modifier" textFill="WHITE">
                <font>
                   <Font size="14" />
                </font>
             </Button>
-            <Button layoutX="204.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleDeletePlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Supprimer" textFill="WHITE">
+            <Button layoutX="304.0" layoutY="357.0" mnemonicParsing="false" onAction="#handleDeletePlace" prefHeight="30" prefWidth="100" style="-fx-background-color: #054A91;" text="Supprimer" textFill="WHITE">
                <font>
                   <Font size="14" />
                </font>
